--- a/.travis.yml
+++ b/.travis.yml
@@ -78,10 +78,10 @@ matrix:
   include:
     - stage: compile
       <<: *compile-template-ompi-x86
-      env: NWCHEM_MODULES=qmandpw ARMCI_NETWORK=MPI-PR USE_OPENMP=1
+      env: NWCHEM_MODULES=qmandpw ARMCI_NETWORK=MPI-PR
     - stage: compile
       <<: *compile-template-ompi-x86
-      env: NWCHEM_MODULES=tce ARMCI_NETWORK=MPI-PR
+      env: NWCHEM_MODULES=tce ARMCI_NETWORK=MPI-PR USE_OPENMP=1
     - stage: compile
       <<: *compile-template-mpich-x86
       env: NWCHEM_MODULES=tinyqmpw ARMCI_NETWORK=MPI-PT USE_SIMINT=1 SIMINT_MAXAM=3
