--- a/src/rdmft/GNUmakefile
+++ b/src/rdmft/GNUmakefile
@@ -21,6 +21,7 @@
          wfn1_element.o \
          wfn1_entropy.o \
          wfn1_e_g.o \
+         wfn1_e_g_2el_corr.o \
          wfn1_e_g_2el_mx.o \
          wfn1_e_g_2el_vx.o \
          wfn1_e_g_2el_hf.o \
