--- a/src/nwpw/pspw/lib/psi/GNUmakefile
+++ b/src/nwpw/pspw/lib/psi/GNUmakefile
@@ -22,14 +22,15 @@
 		psi_history.o \
 		psi_write_filename.o \
 		psi_read_filename.o \
-		berry_phase_pol.o
+		berry_phase_pol.o \
+		rho_symmetrizer.o
 
 
 
 
       LIBRARY = libpspw.a
 
-    USES_BLAS = psi.F geodesic.F geodesic2.F Grassman.F dipole.F psi_history.F skew.F geodesic1.F berry_phase_pol.F psi_dmatrix.F
+    USES_BLAS = psi.F geodesic.F geodesic2.F Grassman.F dipole.F psi_history.F skew.F geodesic1.F berry_phase_pol.F psi_dmatrix.F rho_symmetrizer.F
 
   LIB_DEFINES = 
 
