--- a/src/nwpw/pspw/lib/exchange-correlation/GNUmakefile
+++ b/src/nwpw/pspw/lib/exchange-correlation/GNUmakefile
@@ -20,7 +20,8 @@ SUBDIRS = vdw-DF
 		beef_gga.o \
 		pw92c.o \
 		vs98.o \
-		tpss03.o scan.o pw91c.o  pbe96x.o pbe96c.o
+		tpss03.o scan.o pw91c.o  pbe96x.o pbe96c.o \
+		m06.o  m06-l.o m06_xc.o 
 
 #            vdirac.o \
 
