--- a/src/peigs/src/f77/GNUmakefile
+++ b/src/peigs/src/f77/GNUmakefile
@@ -41,7 +41,7 @@ EOBJ	= xerbl2.o  menode.o pairup.o xstop.o
 
 all:		$(FOBJ) $(EOBJ)
 
-.EXPORT_ALL_VARIABLES:
+#.EXPORT_ALL_VARIABLES:
 
 .PHONY :	clean
 
