--- a/src/nwpw/band/lib/psi/GNUmakefile
+++ b/src/nwpw/band/lib/psi/GNUmakefile
@@ -17,7 +17,8 @@
 			cpsi_new.o \
 			v_cpsi_new.o \
 			v_cpsi_read.o \
-			v_cpsi_write.o
+			v_cpsi_write.o \
+			c_rho_symmetrizer.o
                         
 
 
@@ -25,7 +26,7 @@
 
       LIBRARY = libband.a
 
-    USES_BLAS = cpsi.F c_geodesic.F cpsi_lmbda.F BGrsm.F cpsi_KS.F cpsi_read.F cpsi_write.F v_cpsi_read.F v_cpsi_write.F
+    USES_BLAS = cpsi.F c_geodesic.F cpsi_lmbda.F BGrsm.F cpsi_KS.F cpsi_read.F cpsi_write.F v_cpsi_read.F v_cpsi_write.F 
 
   LIB_DEFINES = 
 
