--- a/src/ddscf/GNUmakefile
+++ b/src/ddscf/GNUmakefile
@@ -15,7 +15,7 @@
 	ga_cont_blk.o           mull_pop.o \
         matrix_exp.o              scf_pstat.o \
         schwarz_max.o             movecs_proj.o \
-        movecs_rotate.o \
+        movecs_rotate.o movecs_molden.o \
         ao_fock_2e.o              movecs_lock.o \
 	fock_2e.o                 fock_2e_et.o \
 	fock_2e_a.o               print_aoints.o \
