--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,7 +36,9 @@ variables:
     - env|egrep BLAS
     - env|egrep SCALAP || true
     - env|egrep -i mkl || true
-    - cd $HOME/builds/nwc*/src
+    - export NWCHEM_TOP=$CI_PROJECT_DIR
+    - if [ "$(lsb_release -i|cut -c 17-)" == "CentOS" ]; then export NWCHEM_TOP=$HOME/$CI_PROJECT_DIR ; fi
+    - cd $NWCHEM_TOP/src ; fi
     - rm -rf tools/ga-* ||true
     - make nwchem_config
     - if [ "$NWCHEM_TARGET" != "LINUX" ]; then make 64_to_32; fi
@@ -52,11 +54,11 @@ variables:
     GIT_CLEAN_FLAGS: -ffdx -e bin -e build -e install
   script:
     - if [ "$FC" == "ifort" ]; then source /opt/intel/compilers_and_libraries_2018/linux/bin/compilervars.sh  intel64; fi
-    - if [ "$FC" == "ifort" ]; then  export NWCHEM_EXECUTABLE=${CI_PROJECT_DIR}/../binaries/nwchem_intel; fi
-    - if [ "$FC" == "flang" ]; then  export NWCHEM_EXECUTABLE=${CI_PROJECT_DIR}/../binaries/nwchem_flang; fi
+    - if [ "$FC" == "ifort" ]; then  export NWCHEM_EXECUTABLE=${NWCHEM_TOP}/../binaries/nwchem_intel; fi
+    - if [ "$FC" == "flang" ]; then  export NWCHEM_EXECUTABLE=${NWCHEM_TOP}/../binaries/nwchem_flang; fi
     - env|egrep -i mkl || true
     - env|egrep  LD_LIBR || true
-    - cd $CI_PROJECT_DIR/QA
+    - cd $NWCHEM_TOP/QA
     - NNPROCS=1
     - if [ "$(uname -s)" == "Darwin" ]; then NNPROCS=2; fi
     - if [ "$(uname -s)" == "Linux" ]; then NNPROCS=4; fi
@@ -71,7 +73,7 @@ variables:
 .intel_template: &intel_sourcing
   before_script:
     - source /opt/intel/compilers_and_libraries_2018/linux/bin/compilervars.sh  intel64
-    - export NWCHEM_EXECUTABLE=${CI_PROJECT_DIR}/../binaries/nwchem_intel
+    - export NWCHEM_EXECUTABLE=${NWCHEM_TOP}/../binaries/nwchem_intel
     - export FC=ifort
 
 .flang_template: &flang_sourcing
@@ -80,7 +82,7 @@ variables:
     - export LD_LIBRARY_PATH=/home/edo/apps/aocc200/aocc-compiler-2.0.0/lib:$LD_LIBRARY_PATH
     - export LD_LIBRARY_PATH=/home/edo/apps/ompi402.flang/lib:$LD_LIBRARY_PATH
     - export PATH=/home/edo/apps/ompi402.flang/bin:$PATH
-    - export NWCHEM_EXECUTABLE=${CI_PROJECT_DIR}/../binaries/nwchem_intel
+    - export NWCHEM_EXECUTABLE=${NWCHEM_TOP}/../binaries/nwchem_intel
     - export FC=flang
 
 .centos8_template: &centos8_sourcing
@@ -130,8 +132,8 @@ linux64_ubuntu:build_flang:
     SCALAPACK_SIZE: 4
     ARMCI_NETWORK: "MPI-PR"
   after_script:
-    - mkdir -p ${CI_PROJECT_DIR}/../binaries
-    - cp ${CI_PROJECT_DIR}/bin/LINUX64/nwchem ${CI_PROJECT_DIR}/../binaries/nwchem_flang
+    - mkdir -p ${NWCHEM_TOP}/../binaries
+    - cp ${NWCHEM_TOP}/bin/LINUX64/nwchem ${NWCHEM_TOP}/../binaries/nwchem_flang
   tags:
     - ubuntu_bionic
 
@@ -149,8 +151,8 @@ linux64_ubuntu:build_intel:
     ARMCI_NETWORK: "MPI-PR"
     USE_FPICF: "Y"
   after_script:
-    - mkdir -p ${CI_PROJECT_DIR}/../binaries
-    - cp ${CI_PROJECT_DIR}/bin/LINUX64/nwchem ${CI_PROJECT_DIR}/../binaries/nwchem_intel
+    - mkdir -p ${NWCHEM_TOP}/../binaries
+    - cp ${NWCHEM_TOP}/bin/LINUX64/nwchem ${NWCHEM_TOP}/../binaries/nwchem_intel
   tags:
     - ubuntu_bionic
 
