Adding Born and COSMO calculations...EJB

--- a/src/nwpw/nwpwlib/utilities/GNUmakefile
+++ b/src/nwpw/nwpwlib/utilities/GNUmakefile
@@ -44,7 +44,8 @@
 		nwpw_emachine.o \
 		BA_memory.o btdb.o beom.o \
 		task_paulsmatrix.o \
-		nwpw_cosmo.o
+		nwpw_cosmo.o \
+		nwpw_born.o
 
 	  OBJ = 
 
