fixed location of ga-config to detect Elpa

--- a/src/nwdft/scf_dft/GNUmakefile
+++ b/src/nwdft/scf_dft/GNUmakefile
@@ -54,7 +54,7 @@ HEADERS = dftps.fh dft_fdist.fh dft_conv.fh
 
 include ../../config/makefile.h
 ifeq ($(_USE_SCALAPACK),Y)
-_USE_ELPA = $(shell ${NWCHEM_TOP}/src/tools/install/bin/ga-config  --use_elpa| awk ' /1/ {print "Y"}')
+_USE_ELPA = $(shell ${GA_PATH}/bin/ga-config  --use_elpa| awk ' /1/ {print "Y"}')
 
 ifeq ($(_USE_ELPA),Y)
  LIB_DEFINES += -DUSE_ELPA
